src/sidebar/panel.css
/* ... */
.select-none-button:hover,
.select-all-button:hover {
  background-color: var(--color-turkese2);
  color: var(--color-black);
  border-color: var(--color-black);
}
.select-none-button:active,
.select-all-button:active {
  background-color: var(--color-turkese1);
  color: var(--color-blue4);
  border-color: var(--color-blue4);
}
.select-none-button {
  display: none;
}
.cleanup-counter.shaking {
  animation: animation-shake-x 0.42s linear;
  animation-delay: 0;
}
input[type="checkbox"].cleanup-checkbox {
  appearance: none;
  -webkit-appearance: none;
  outline: none;
  position: absolute;
  right: 19px;
  top: 7px;
  width: 17px;
  height: 17px;
  border: solid 1px var(--color-grey4);
  border-radius: 3px;
  background-color: none;
  opacity: 0;
  z-index: -1;
}
input[type="checkbox"].cleanup-checkbox:before {
  content: " ";
  position: absolute;
  z-index: -1;
  width: 31px;
  height: 37px;
  right: -9px;
  bottom: -11px;
  background-color: transparent;
}

input[type="checkbox"].cleanup-checkbox:hover {
  border-color: var(--color-grey5);
}
input[type="checkbox"].cleanup-checkbox:active {
  background-color: var(--color-blue1);
  border-color: var(--color-blue5);
}
input[type="checkbox"].cleanup-checkbox:checked {
  background: no-repeat center url("checkmark.svg") transparent;
  border: 1px solid var(--color-blue3);
}
input[type="checkbox"].cleanup-checkbox:checked:hover {
  background: no-repeat center url("checkmark_hover.svg") var(--color-blue1);
  border: 1px solid var(--color-blue4);
}
input[type="checkbox"].cleanup-checkbox:active:checked {
  background: no-repeat center url("checkmark_active.svg") var(--color-grey2);
  border-color: var(--color-grey5);
}
#content.cleanup-mode li.bookmark.selected {
  background-color: var(--color-blue2);
  border-top: 1px solid var(--color-turkese2);
  margin-top: -1px;
  height: 39px;
  box-sizing: border-box;
  border-bottom: 1px solid var(--color-turkese2);
}
#content.cleanup-mode li.bookmark.selected > a.link {
  color: var(--color-grey5);
}
#content.cleanup-mode li.bookmark.selected > a.link:hover {
  background-color: var(--color-blue1);
}
#content.cleanup-mode input.cleanup-checkbox {
  opacity: 1;
  z-index: 1;
}
#content.cleanup-mode button.delete-button {
  opacity: 0;
  visibility: hidden;
  transition: all;
  transition-duration: 100ms;
}

/* cleanup animation */
#content.cleanup-mode .cleanup-button svg > .trashcan-top {
  transform-box: fill-box;
  transform-origin: 0px 2px;
  animation: anim-open 0.3s forwards;
  animation-timing-function: ease-out;
} 
@keyframes anim-open {
  0% {
      transform: translate(0px, 0px) rotate(0deg);
  }
  100% {
      transform: translate(0px, -1.8px) rotate(-12deg);
  }
}
#content:not(.cleanup-mode) .cleanup-button svg > .trashcan-top {
  transform-box: fill-box;
  transform-origin: 0px 2px;
  animation: anim-close 0.3s forwards;
  animation-timing-function: ease-out;
}
@keyframes anim-close {
  0% {
    transform: translate(0px, -1.8px) rotate(-12deg);
  }
  100% {
    transform: translate(0px, 0px) rotate(0deg);
  }
}

#toolbar {
  transition-duration: var(--timeCleanupFold);
  transition-timing-function: ease-in;
  height: 24px;
}
#content.cleanup-mode #toolbar {
  height: 48px;
  transition-duration: var(--timeCleanupUnfold);
  transition-timing-function: ease-out;
}
#content ul.bookmarks {
  transform: translateY(0px);
  transition-delay: 0ms;
  transition-property: transform;
  transition-duration: var(--timeCleanupFold);
  transition-timing-function: ease-in;
}
#content.cleanup-mode ul.bookmarks {
  transform: translateY(24px);
  transition-delay: 0ms;
  transition-property: transform;
  transition-duration: var(--timeCleanupUnfold);
  transition-timing-function: ease-out;
}
#content .cleanup-confirmation {
  z-index: -1;
  opacity: 1;
  transform: translateY(-24px);
  transition: opacity;
  transition-duration: var(--timeCleanupUnfold);
  transition-delay: 0s;
}
#content.cleanup-mode .cleanup-confirmation {
  z-index: 1;
  transition-property: opacity;
  transition-delay: var(--timeCleanupUnfold);
  transition-duration: 120ms;
  transform: translateY(0px);
}
button.delete-selected-button,
button.cancel-cleanup-button {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 100ms;
  transition-delay: 120ms;
  appearance: none;
  -webkit-appearance: none;
  outline: none;
  border: none;
}
#content.cleanup-mode .delete-selected-button {
  opacity: 1;
  transition-duration: 100ms;
  transition-delay: calc(var(--timeCleanupUnfold) + 40ms);
}
#content.cleanup-mode .cancel-cleanup-button {
  opacity: 1;
  transition-duration: 120ms;
  transition-delay: calc(var(--timeCleanupUnfold) + 80ms);
}
button.add-bookmark {
  z-index: 1;
  position: relative;
  display: block;
  opacity: 1;
  transition-property: opacity;
  transition-duration: var(--timeCleanupFold);
}
#content.cleanup-mode button.add-bookmark {
  z-index: -1;
  position: absolute;
  opacity: 0;
  transition-duration: 0s;
}
.select-all-or-none-button {
  z-index: -1;
  position: absolute;
  opacity: 0;
  float: right;
}
#content.cleanup-mode .select-all-or-none-button {
  z-index: 1;
  position: relative;
  opacity: 1;
  transition-property: opacity;
  transition-duration: 0;
  transition-delay: 0;
}
.cleanup-counter {
  z-index: -1;
  position: absolute;
  height: 24px;
  font-size: 11px;
  line-height: 24px;
  padding: 0 5px 0 5px;
  opacity: 1;
  transition-property: width;
  opacity: 0;
  transition: none;
  transition-duration: 0;
  padding-left: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}
#content.cleanup-mode .cleanup-counter {
  z-index: 1;
  position: relative;
  display: inline-block;
  opacity: 1;
  font-size: 11px;
  line-height: 24px;
  transition: all;
  transition-property: opacity;
  transition-delay: var(--timeSearchFieldHiding);
  transition-duration: 300ms;
  width: 20px;
}
.cleanup-counter-context,
.cleanup-counter-selected {
  display: inline-block;
  padding: 0;
  vertical-align: top;
}
/* ... */

